RestyVR1/src/objects/SystemLog__c.object
<CustomObject>
    <fields>
        <fullName>Log_Type__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>UserLog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originating_Class_Name__c</fullName>
        <label>Originating Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SystemLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>SystemLog</label>
    <nameField>
        <label>SystemLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SystemLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>